# DistributedATS

./: AUTHORS  CMakeLists.txt  LICENSE.TXT  README.md  build_with_cmake.sh  download_deps_and_build_all.sh
Common/: BasicDomainParticipant.h  Common.h  ConfigFileHelper.h  ConvertUtils.h  LoggerHelper.h  SampleObserver.h  fix_json_converter.h
DataService/: README.md
DataService/src/: AuthService.cpp  AuthService.h  CMakeLists.txt  DataService.mpc  ExecutionReportDataReaderListenerImpl.cpp  ExecutionReportDataReaderListenerImpl.h  LogonDataReaderListenerImpl.cpp  LogonDataReaderListenerImpl.hpp  LogoutDataReaderListenerImpl.cpp  LogoutDataReaderListenerImpl.hpp  MarketDataIncrementalRefreshDataReaderListenerImpl.cpp  MarketDataIncrementalRefreshDataReaderListenerImpl.h  MarketDataRequestDataReaderListenerImpl.cpp  MarketDataRequestDataReaderListenerImpl.h  MarketDataService.cpp  MarketDataService.h  MassOrderStatusRequestDataReaderListenerImpl.cpp  MassOrderStatusRequestDataReaderListenerImpl.h  MassOrderStatusService.cpp  MassOrderStatusService.h  OrderMassStatusRequestDataReaderListenerImpl.cpp  OrderMassStatusRequestDataReaderListenerImpl.h  OrderMassStatusRequestService.cpp  OrderMassStatusRequestService.h  PgConnection.hpp  RefDataService.cpp  RefDataService.h  SQLiteConnection.hpp  SecurityListRequestDataReaderListenerImpl.cpp  SecurityListRequestDataReaderListenerImpl.hpp  main.cpp
Diagrams/: BasicATS.drawio  CryptoCLOB.drawio  HighLevelSystemDiagram  MiscDiagrams.drawio  RoundTripLatency.drawio  USTreasuryCLOB.drawio
FIXGateway/: README.md
FIXGateway/src/: Application.cpp  Application.hpp  AuthServiceHelper.cpp  AuthServiceHelper.h  CMakeLists.txt  ConcurrentQueue.h  DataReaderContainer.h  DataWriterContainer.hpp  ExecutionReportDataReaderListenerImpl.cpp  ExecutionReportDataReaderListenerImpl.h  FIXGateway.mpc  FIXMsgComposerThread.h  FileLog.cpp  FileLog.h  LogonDataReaderListenerImpl.cpp  LogonDataReaderListenerImpl.hpp  LogoutDataReaderListenerImpl.cpp  LogoutDataReaderListenerImpl.hpp  MarketDataIncrementalRefreshDataReaderListenerImpl.cpp  MarketDataIncrementalRefreshDataReaderListenerImpl.h  MarketDataSnapshotFullRefreshDataReaderListenerImpl.cpp  MarketDataSnapshotFullRefreshDataReaderListenerImpl.h  OrderCancelRejectDataReaderListenerImpl.cpp  OrderCancelRejectDataReaderListenerImpl.h  OrderMassCancelReportDataReaderListenerImpl.cpp  OrderMassCancelReportDataReaderListenerImpl.h  SecurityListDataReaderListenerImpl.cpp  SecurityListDataReaderListenerImpl.h  SocketAcceptor.cpp  SocketAcceptor.h  SocketConnection.cpp  SocketConnection.h  main.cpp
GenTools/: CMakeLists.txt  README.md  run_fastddsgen.sh
GenTools/QuickFIX2FastDDS/: ComponentParser.py  Entity.py  Member.py  MessageParser.py  QuickFIX2FastDDS.py  RequiredFieldsComponents.py
GenTools/QuickFIX2OpenDDS/: ComponentParser.py  Entity.py  Member.py  MessageParser.py  QuickFIX2OpenDDS.py  README  RequiredFieldsComponents.py
GenTools/idl/: Adapters.mpc  BusinessMessageReject.cxx  BusinessMessageReject.h  BusinessMessageReject.hpp  BusinessMessageReject.idl  BusinessMessageRejectAdapter.cpp  BusinessMessageRejectAdapter.hpp  BusinessMessageRejectCdrAux.hpp  BusinessMessageRejectCdrAux.ipp  BusinessMessageRejectLogger.hpp  BusinessMessageRejectPubSubTypes.cxx  BusinessMessageRejectPubSubTypes.h  BusinessMessageRejectPubSubTypes.hpp  BusinessMessageRejectTypeObject.cxx  BusinessMessageRejectTypeObject.h  BusinessMessageRejectTypeObjectSupport.cxx  BusinessMessageRejectTypeObjectSupport.hpp  CMakeLists.txt  ConvertUtils.h  DistributedATS_Export.h  ExecutionReport.cxx  ExecutionReport.h  ExecutionReport.hpp  ExecutionReport.idl  ExecutionReportAdapter.cpp  ExecutionReportAdapter.hpp  ExecutionReportCdrAux.hpp  ExecutionReportCdrAux.ipp  ExecutionReportLogger.hpp  ExecutionReportPubSubTypes.cxx  ExecutionReportPubSubTypes.h  ExecutionReportPubSubTypes.hpp  ExecutionReportTypeObject.cxx  ExecutionReportTypeObject.h  ExecutionReportTypeObjectSupport.cxx  ExecutionReportTypeObjectSupport.hpp  Header.cxx  Header.h  Header.hpp  Header.idl  (+263 more)
GenTools/spec/: dats_requirements.xml
LatencyTest/: Application.cpp  Application.h  CMakeLists.txt  ExecutionReportDataReaderListenerImpl.cpp  ExecutionReportDataReaderListenerImpl.h  LatencyTest.cfg  LatencyTest.cpp  LatencyTest.h  LatencyTest.mpc  NewOrderSingleDataReaderListenerImpl.cpp  NewOrderSingleDataReaderListenerImpl.h  README  README.md
MatchingEngine/: README.md
MatchingEngine/src/: CMakeLists.txt  DataWriterContainer.h  Market.cpp  Market.h  MarketDataSnapshotFullRefreshDataReaderListenerImpl.cpp  MarketDataSnapshotFullRefreshDataReaderListenerImpl.h  MatchingEngine.mpc  NewOrderSingleDataReaderListenerImpl.cpp  NewOrderSingleDataReaderListenerImpl.h  Order.cpp  Order.h  OrderBookStats.h  OrderCancelReplaceRequestDataReaderListenerImpl.cpp  OrderCancelReplaceRequestDataReaderListenerImpl.h  OrderCancelRequestDataReaderListenerImpl.cpp  OrderCancelRequestDataReaderListenerImpl.h  OrderException.cpp  OrderException.h  OrderMassCancelRequestDataReaderListenerImpl.cpp  OrderMassCancelRequestDataReaderListenerImpl.h  PriceDepthPublisherService.cpp  PriceDepthPublisherService.hpp  SecurityListDataReaderListenerImpl.cpp  SecurityListDataReaderListenerImpl.h  SecurityListRequestDataWriterListener.h  main.cpp
MiscATS/: start_ats.py  stop_ats.py
MiscClients/cpp_ws_reactjs/fix_ws_proxy/: CMakeLists.txt  fix_application.cpp  fix_application.h  fix_ws_proxy.cpp  fixproxy.ini  ws_server.cpp  ws_server.h
MiscClients/cpp_ws_reactjs/oms/: CMakeLists.txt  oms.cpp
Protocols/: tcp.ini
SimulatorATS/: Application.cpp  Application.h  CMakeLists.txt  Instrument.hpp  Market.cpp  Market.hpp  OrderManager.cpp  OrderManager.hpp  SimulatorATS.cfg  SimulatorATS.cpp  SimulatorATS.mpc
TestSuiteJ/: README  pom.xml
cmake/: DDSConfig.cmake  liquibookConfig.cmake  log4cxxConfig.cmake  quickfixConfig.cmake
config/: log4cxx.xml
docker/: Docker.Build_DATS_Deps  Docker.Build_Distributed_ATS  Docker.Crypto_CLOB  Docker.MultiMatchingEngineATS  Docker.UST_CLOB  Docker.WebTrader  (+21 more)
(+245 files in other folders)
